maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value keepWallOnLeft
    keepWallOnLeft()
    ^Escaper:8: error: not found: value keepWallOnLeft
  	keepWallOnLeft()
        ^